adicionando foto do gatinho

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
-<cabeça>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta nome="viewport" conteúdo="largura=largura do dispositivo, escala inicial=1,0">
-    <título>Fanpage de Gatinhos</título>
-</cabeça>
-<corpo>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fanpage de Gatinhos</title>
+</head>
+<body>
     <h1>Perfil #catsoninstagram</h1>
-    <img src="images/gatinho_roawn.jpg.jpg">
-</corpo>
+    <img src="imagem/gato2.jpg">
+</body>
 </html>
